2004-11-18  Don Porter  <dgp@users.sourceforge.net>

	* doc/SaveResult.3:	Documentation for Tcl_*InterpState (TIP 226).

	* generic/tclEvent.c (HandleBgErrors):	Simplified program flow.

	* tests/basic.test:	Updated functional (not testing) uses of
	* tests/io.test:	[bgerror] to make use of [interp bgerror].
	* tests/socket.test:
	* tests/timer.test:

	* tests/interp.test (interp-36.*):	[interp bgerror] tests.

	* generic/tclInterp.c:	Corrected [interp bgerror] error messages.

2004-11-18  Reinhard Max  <max@suse.de>

	* unix/tcl.m4 (SC_CONFIG_MANPAGES): Applied an improved version of
	* unix/configure.in:                patch #996085, that introduces
	* unix/Makefile.in:                 --enable-man-suffix.

	* unix/installManPage:              added
	* unix/mkLinks.tcl:                 removed
	* unix/mkLinks:                     removed
	* unix/configure:                   generated

	* unix/Makefile.in:                 Don't install tclConfig.h .

2004-11-17  Don Porter  <dgp@users.sourceforge.net>

	* unix/configure.in:	The change below reveals that the public
	data type Tcl_StatBuf relies on config information.  For now,
	disabled the use of the tclConfig.h file until its full impact
	on Tcl's interface can be assessed.
	
	* unix/configure:	autoconf-2.57

	* generic/tcl.h:	Moved the #include "tclConfig.h" out of
	* generic/tclInt.h:	tcl.h.  The config settings are not part of
	* generic/tclPort.:	the public interface, and having it there
	breaks compiled against uninstalled Tcl and extensions using
	autoconf-2.5*.

2004-11-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tclUnixChan.c (TtySetOptionProc): fixed crash configuring
	-ttycontrol on a channel. [Bug 1067708]

2004-11-16  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclIOUtil.c (TclFSEpochOk):	There were two code paths
	via which the thread copy of filesystemEpoch could be synched with
	the master copy, but only one kept the filesystem list cache up