@@ -270,6 +270,9 @@
 /* Are we to override what our default encoding is? */
 #undef TCL_DEFAULT_ENCODING
 
+/* Is Tcl built as a framework? */
+#undef TCL_FRAMEWORK
+
 /* Is memory debugging enabled? */
 #undef TCL_MEM_DEBUG
 
